--- a/doc/user_guide/tex/genom-configuration.tex
+++ b/doc/user_guide/tex/genom-configuration.tex
@@ -46,16 +46,16 @@ They are generally available on most systems. If not, download
 them from their web sites. 
 
 \begin{itemize}
-\item {\tt autoconf} version 2.59 or later
-\item {\tt automake} version 1.8 or later
-\item {\tt GNU make} version 3.79 or later  ({\tt <http://www.gnu.org/software/make/make.html>})
-\item {\tt pkgconfig} version 0.15 or later (usually part of Gnome development packages).
-\item {\tt groff} 1.10 or later (usually part of system packages).
-\item {\tt Tcl/Tk} 8.0 or later development files (for eltclsh) ({\tt <http://tcl.tk/>})
+\item \texttt{autoconf} version 2.59 or later
+\item \texttt{automake} version 1.8 or later
+\item \texttt{GNU make} version 3.79 or later  (\texttt{<http://www.gnu.org/software/make/make.html>})
+\item \texttt{pkgconfig} version 0.15 or later (usually part of Gnome development packages).
+\item \texttt{groff} 1.10 or later (usually part of system packages).
+\item \texttt{Tcl/Tk} 8.0 or later development files (for eltclsh) (\texttt{<http://tcl.tk/>})
 \end{itemize}
 
-To edit GenoM modules it is also recommended to use {\tt xemacs} to take
-advantage of {\tt genom-mode}.
+To edit GenoM modules it is also recommended to use \texttt{xemacs} to take
+advantage of \texttt{genom-mode}.
 
 \section{What to download ?}
 \label{sec|configuration|download}
@@ -65,29 +65,29 @@ advantage of {\tt genom-mode}.
 GenoM is part of a suite of open-sources tools. 
 
 In order to install and use GenoM you will have to download and install
-the following libraries and tools from  {\tt
-http://softs.laas.fr/openrobots/} :
+the following libraries and tools from  
+\texttt{http://softs.laas.fr/openrobots/} :
 
 \begin{itemize}
-\item {\tt mkdep}: LAAS tool to determine dependencies
-\item {\tt pocolibs}: system communication and real-time primitives
-\item {\tt libedit} (editline): generic line editing and history
+\item \texttt{mkdep}: LAAS tool to determine dependencies
+\item \texttt{pocolibs}: system communication and real-time primitives
+\item \texttt{libedit} (editline): generic line editing and history
 functions (for eltclsh)
-\item {\tt eltclsh}: interactive TCL shell linked with editline (optional but very practical)
-\item {\tt GenoM}: the generator of modules
+\item \texttt{eltclsh}: interactive TCL shell linked with editline (optional but very practical)
+\item \texttt{GenoM}: the generator of modules
 \end{itemize}
 
 Later on you can also be interested in the following opensource softwares
 that are part of the OpenRobots suite and work nicely with GenoM:
 
 \begin{itemize}
-\item {\tt GDHE}: a tool to design 3D interface
-\item {\tt OpenPRS}: a tool to design complexe supervisors
+\item \texttt{GDHE}: a tool to design 3D interface
+\item \texttt{OpenPRS}: a tool to design complexe supervisors
 \end{itemize}
 
 \subsubsection{mkdep}
 
-{\tt Mkdep} is a tool to manage dependencies for make(1) automatically on
+\texttt{Mkdep} is a tool to manage dependencies for make(1) automatically on
 Unix-like systems.  The original feature of this version is to be able to
 handle incremental updates of the dependencies.
 
@@ -95,7 +95,7 @@ It is recommended to install it.
 
 \subsubsection{pocolibs}
 
-{\tt Pocolib} is a system communication and real-time primitive layers used by
+\texttt{Pocolib} is a system communication and real-time primitive layers used by
 GenoM modules. 
 
 These libraries run on systems with POSIX.1 threads and basic real-time
@@ -107,7 +107,7 @@ untested and unsupported (this may change again in the future)
 
 \subsubsection{libedit / editline}
 
-The {\tt editline} library provides generic line editing and history
+The \texttt{editline} library provides generic line editing and history
 functions, similar to those found in tcsh(1). This package contains a
 Makefile for compiling the current version of NetBSD's library which
 provides the same consistent installation and compilation environments as
@@ -124,18 +124,18 @@ Editline is used by eltclsh.
 
 
 You will need to specify a root path (for instance the environment
-variable {\tt OPENROBOTS}) where the binaries, the libraries, the
+variable \texttt{OPENROBOTS}) where the binaries, the libraries, the
 include files, and so on will be installed. Typically you can set this
-environment variable to {\tt /usr/local/openrobots}.
+environment variable to \texttt{/usr/local/openrobots}.
 
 Then modify (or set if not previously defined) the following 
 environment variables :
 
-{\tt PATH} :  add {\tt \$OPENROBOTS/bin}
+\texttt{PATH} :  add \texttt{\$OPENROBOTS/bin}
 
-{\tt PKG\_CONFIG\_PATH} :  add  {\tt \$OPENROBOTS/lib/pkgconfig}
+\texttt{PKG\_CONFIG\_PATH} :  add  \texttt{\$OPENROBOTS/lib/pkgconfig}
 
-{\tt LD\_LIBRARY\_PATH} :  add  {\tt \$OPENROBOTS/lib:\$OPENROBOTS/lib/openprs}
+\texttt{LD\_LIBRARY\_PATH} :  add  \texttt{\$OPENROBOTS/lib:\$OPENROBOTS/lib/openprs}
 
 
 
@@ -148,24 +148,24 @@ build, and install. Configure options may vary, and some packages don't
 require the autogen step. It is recommended that you build in a separate
 directory. 
 
-The {\tt --prefix} option (default: /usr/local) defines the base directory
+The \texttt{--prefix} option (default: /usr/local) defines the base directory
 of the installation. We recommend a dedicated path (eg,
 OPENROBOTS=/usr/local/openrobots).
 
 If you want to install binaries for different type of machine
-on the same files tree you can also use {\tt --exec-prefix}
+on the same files tree you can also use \texttt{--exec-prefix}
 option. It allows to specify where to install the binaries like for
-instance: {\tt --exec-prefix=\$OPENROBOTS/\$MACHTYPE-\$OSTYPE} (eg,
-{\tt --exec-prefix=\$OPENROBOTS/i386-linux}, for a PC running linux).
-In such a case, be careful to adapt the environment variables {\tt
-PATH, LD\_LIBRARY\_PATH and PKG\_CONFIG\_PATH} defined above to this
-{\tt \$exec\_prefix} path.
+instance: \texttt{--exec-prefix=\$OPENROBOTS/\$MACHTYPE-\$OSTYPE} (eg,
+\texttt{--exec-prefix=\$OPENROBOTS/i386-linux}, for a PC running linux).
+In such a case, be careful to adapt the environment variables 
+\texttt{PATH, LD\_LIBRARY\_PATH and PKG\_CONFIG\_PATH} defined above to this
+\texttt{\$exec\_prefix} path.
 %$
-However, the default value (equal to {\tt --prefix}) is usualy great. 
+However, the default value (equal to \texttt{--prefix}) is usualy great. 
 
 
 Here is an
-example with {\tt pocolibs}. 
+example with \texttt{pocolibs}. 
 
 \begin{cartouche}
 \begin{verbatim}
@@ -180,13 +180,13 @@ make install
 \end{verbatim}
 \end{cartouche}
 
-The command {\tt ./autogen.sh} is not always necessary. If there is
-already a script {\tt configure} you can try it directly.
+The command \texttt{./autogen.sh} is not always necessary. If there is
+already a script \texttt{configure} you can try it directly.
 
-On some systems, {\tt --with-tcl=DIR} and {\tt --with-tk=DIR} will be
-required to specify where to find {\tt tclConfig.sh} (resp. {\tt tkConfig.h}). 
+On some systems, \texttt{--with-tcl=DIR} and \texttt{--with-tk=DIR} will be
+required to specify where to find \texttt{tclConfig.sh} (resp. \texttt{tkConfig.h}). 
 
-The {\tt configure} command has many options. You can see them with the
-option {\tt --help}. 
+The \texttt{configure} command has many options. You can see them with the
+option \texttt{--help}. 
 
 
