--- a/doc/user_guide/tex/genom-generation.tex
+++ b/doc/user_guide/tex/genom-generation.tex
@@ -32,70 +32,70 @@
 %
 
 % =======================================================================
-\section{The {\tt genom} command}
+\section{The \texttt{genom} command}
 
 \begin{description}
 
-\item{\bf Synopsis}
+\item\textbf{Synopsis}
 
-{\tt genom [-Ocdinto] [-I{\em path}] [-D{\em macro}] <module>[.gen]}
+\texttt{genom [-Ocdinto] [-I\emph{path}] [-D\emph{macro}] <module>[.gen]}
 
-\item{\bf Description}
+\item\textbf{Description}
 
-{\tt genom}  is the  command that  generates a  module. The  {\tt module}
+\texttt{genom}  is the  command that  generates a  module. The  \texttt{module}
 argument is the name  of the file which  contains the description of  the
-module. The {\tt  .gen} is   optional and  is  automatically appended  if
+module. The \texttt{.gen} is   optional and  is  automatically appended  if
 omitted.
 
-{\tt genom} accepts the following options:
+\texttt{genom} accepts the following options:
 
 \begin{tabularx}{\linewidth}{lX}
-{\tt -O} & {\em Accept \textbf{O}bsolete syntax:} the syntax of
+\texttt{-O} & \emph{Accept \textbf{O}bsolete syntax:} the syntax of
 \texttt{.gen} files has changed a bit over time. This option tells
 genom to still accept input syntax that is now considered as obsolete.
 Warning: this option can produce output code that is incompatible with
 what is generated without it. Use at your own risk. \\
 
-{\tt -i} &  {\em Installs the  directory  {\tt codels/}:} you should  use
+\texttt{-i} &  \emph{Installs the  directory  \texttt{codels/}:} you should  use
 this option when  generating the module  for the first time. When  called
-with {\tt -i}, {\tt  genom} will install  the directory {\tt  codels/} as
+with \texttt{-i}, \texttt{genom} will install  the directory \texttt{codels/} as
 well as templates for  the codel files in this  directory.  It  will also
-create  all the {\tt Makefiles}  (in the main directory   and in the {\tt
-codels} directory) used to compile  the module.  If  the files that would
-normally be  installed  are already present, {\tt   genom}  will ask  for
+create  all the \texttt{Makefiles}  (in the main directory   and in the 
+\texttt{codels} directory) used to compile  the module.  If  the files that would
+normally be  installed  are already present, \texttt{genom}  will ask  for
 confirmation before overwriting files.\\
 
-{\tt -c} & {\em Conditional regeneration:} module is regenerated only
+\texttt{-c} & \emph{Conditional regeneration:} module is regenerated only
 if files from which  it depends have  been modified since last generation
-({\em i.e.} the {\tt .gen} file or files it includes).\\
+(\emph{i.e.} the \texttt{.gen} file or files it includes).\\
 
-{\tt -t} &    {\em Tcl libraries  generation:}    Generates Tcl interface
+\texttt{-t} &    \emph{Tcl libraries  generation:}    Generates Tcl interface
 libraries. They are mandatory  if you wish to  control this module from a
 tcl interpreter (see section~\ref{sec|tcl}).\\
 
-{\tt    -o}  & {\em    OpenPRS libraries generation:} Generates OpenPRS
+\texttt{-o}  & \emph{OpenPRS libraries generation:} Generates OpenPRS
 interface libraries.  They are  mandatory  if you   wish to  control this
 module from an OpenPRS program.\\
 
-{\tt -n} & Generates the perl script that is used to generate the module,
+\texttt{-n} & Generates the perl script that is used to generate the module,
 without actually executing it.\\
 
-{\tt -d} & Turns on debugging mode inside the {\em yacc} parser.\\
+\texttt{-d} & Turns on debugging mode inside the \emph{yacc} parser.\\
 
-{\tt -I{\em path}} & Defines paths for included files (same as {\tt
--I} option of {\tt cc}).\\
+\texttt{-I\emph{path}} & Defines paths for included files (same as 
+\texttt{-I} option of \texttt{cc}).\\
 
-{\tt -D{\em macro}} & Defines macros as for {\tt cc}.\\
+\texttt{-D\emph{macro}} & Defines macros as for \texttt{cc}.\\
 \end{tabularx}
 
-Once the module has been installed ({\tt -i} option)  for the first time,
-you just   have to invoke {\tt make}   (GNUmake is required)  in the main
+Once the module has been installed (\texttt{-i} option)  for the first time,
+you just   have to invoke \texttt{make}   (GNUmake is required)  in the main
 directory to regenerate or compile the module.
 
-The {\tt -i} option modifies files in the {\tt codels/} directory. Use it
+The \texttt{-i} option modifies files in the \texttt{codels/} directory. Use it
 carefully.  If you wish  to manually  get a  new   template file for  the
-codels, you can find them in the directory {\tt .genom/codels/}.  These files
-are always  up-to-date. Also consider the  XEmacs  mode {\tt genom-mode},
+codels, you can find them in the directory \texttt{.genom/codels/}.  These files
+are always  up-to-date. Also consider the  XEmacs  mode \texttt{genom-mode},
 which lets  you  insert codel templates  into  existing codel files  (see
 chapter~\ref{cha|edit}).
 
@@ -105,106 +105,106 @@ chapter~\ref{cha|edit}).
 % =======================================================================
 \section{Product of the generation}
 
-The module generation produces files in the two directories {\tt codels/}
-and {\tt server/}.  The files located  in the  {\tt codels/}  directory are
+The module generation produces files in the two directories \texttt{codels/}
+and \texttt{server/}.  The files located  in the  \texttt{codels/}  directory are
 described in the next chapter.  This  section describes the files located
-in  the  {\tt server/} directory.   The {\tt  demo} module   is  used as an
-example: you can always replace the string {\tt demo} by the name of your
+in  the  \texttt{server/} directory.   The \texttt{demo} module   is  used as an
+example: you can always replace the string \texttt{demo} by the name of your
 module.
 
-Compiling these files produces binary objects and executables in the {\tt
-\$\{TARGET\}} sub-\-directories. See appendix~\ref{anx|files} for
+Compiling these files produces binary objects and executables in the 
+\texttt{\$\{TARGET\}} sub-\-directories. See appendix~\ref{anx|files} for
 information on the file-system hierarchy.
 
 % -----------------------------------------------------------------------
 \subsection{Interface libraries}
 
-\subsubsection{Requests library: {\tt demoMsgLib}}
+\subsubsection{Requests library: \texttt{demoMsgLib}}
 
 This library implements  the basic requests  functions (request emission,
 replies reception) and is used by the clients of this module.
 
-The {\tt   C}  source code    of  this  library  can be   found  in  {\tt
-demoMsgLib.c}.  The header
-file {\tt demoMsgLib.h}, which must  be included by clients, contains the
+The \texttt{C}  source code    of  this  library  can be   found  in  
+\texttt{demoMsgLib.c}.  The header
+file \texttt{demoMsgLib.h}, which must  be included by clients, contains the
 definitions for the server identification and communication establishment
 (name and size of the mailbox, function prototypes\ldots).
 
-To use this  library, you must link your  program with  {\tt
--ldemoClient}. 
+To use this  library, you must link your  program with  
+\texttt{-ldemoClient}. 
 
 
-\subsubsection{Posters library: {\tt demoPosterLib}}
+\subsubsection{Posters library: \texttt{demoPosterLib}}
 
 This library implements the basic posters functions for this module (read
-and display   functions).  The same    structure as above  is used:  {\tt
-demoPosterLib.c} is  the  source code. 
-{\tt demoPosterLib.h}   defines the name  of  the
+and display   functions).  The same    structure as above  is used:  
+\texttt{demoPosterLib.c} is  the  source code. 
+\texttt{demoPosterLib.h}   defines the name  of  the
 posters along  with  their data structures and prototypes of access
 funtions.
-The  {\em cIDS} structure is
-also defined there\footnote{the structures included by the {\em cIDS} are
-defined in the file {\tt modules.h}, located in the genom source tree.}.
+The  \emph{cIDS} structure is
+also defined there\footnote{the structures included by the \emph{cIDS} are
+defined in the file \texttt{modules.h}, located in the genom source tree.}.
 
-To  use this library,  you must link  with  {\tt 
+To  use this library,  you must link  with  \texttt{
 -ldemoClient}.
 
 
 % -----------------------------------------------------------------------
 \subsection{Useful header files}
 
-The file {\tt  demoHeader.h} must  be included  in every  codel file.  It
+The file \texttt{demoHeader.h} must  be included  in every  codel file.  It
 contains the definitions of several constants that characterize the module
 (name, period, posters, \ldots)  as well as the two  macros that let  you
-access the {\em IDS} ({\em SDI\_F} and {\em SDI\_C}).
+access the \emph{IDS} (\emph{SDI\_F} and \emph{SDI\_C}).
 
-The file  {\tt demoError.h} contains the  definitions of the  error codes
-(reports declared in the {\tt fail\_reports} field) of this module.
+The file  \texttt{demoError.h} contains the  definitions of the  error codes
+(reports declared in the \texttt{fail\_reports} field) of this module.
 
-The file {\tt  demoType.h} defines the actual {\em  IDS} structure. It is
-not necessarily the same as  in the  {\tt .gen}  file, especially if  the
-module   defines   reentrant   requests   ({\em  i.e.}   compatible  with
+The file \texttt{demoType.h} defines the actual \emph{IDS} structure. It is
+not necessarily the same as  in the  \texttt{.gen}  file, especially if  the
+module   defines   reentrant   requests   (\emph{i.e.}   compatible  with
 themselves).
 
 % -----------------------------------------------------------------------
 \subsection{Tcl library}
 
-The files  {\tt demoTcl.c} and {\tt demo.tcl}  are used by Tcl to control
+The files  \texttt{demoTcl.c} and \texttt{demo.tcl}  are used by Tcl to control
 the module. See section~\ref{sec|tcl} in this document.
 
 
 % -----------------------------------------------------------------------
 \subsection{Propice library}
 
-The files located in the {\tt propice/} directory are  used by Propice to
+The files located in the \texttt{propice/} directory are  used by Propice to
 control the module. See section~\ref{sec|propice} in this document.
 
 
 % -----------------------------------------------------------------------
 \subsection{Executables: server, test program, initialization request}
 
-The executable {\tt demoTest} is an interactive test program. To use it,
+The executable \texttt{demoTest} is an interactive test program. To use it,
 you just have to  run
-{\tt \$\{TARGET\}/demoTest}.
+\texttt{\$\{TARGET\}/demoTest}.
 
-The  files    {\tt demoCntrlTask.c},   {\tt demoMotionTask.c}    and {\tt
-demoModuleInit.c} contain the module's execution tasks source code.  Once
-compiled, they produce the  files  {\tt
-libdemoServer.a}.  The   file  {\tt demoModuleInit.c} produces    the
-function {\tt demoTaskInit} which spawns the module.
+The  files    \texttt{demoCntrlTask.c},   \texttt{demoMotionTask.c}    and 
+\texttt{demoModuleInit.c} contain the module's execution tasks source code.  Once
+compiled, they produce the  files  
+\texttt{libdemoServer.a}.  The   file  \texttt{demoModuleInit.c} produces    the
+function \texttt{demoTaskInit} which spawns the module.
 
-The file {\tt demoInit.c} contains the code that invokes the {\em
+The file \texttt{demoInit.c} contains the code that invokes the {\em
 Initialization} request of the module (if the module defines one). To use
-it, run {\tt demoInit} (the executable is in {\tt
-\$\{prefix\}/bin}.
+it, run \texttt{demoInit} (the executable is in 
+\texttt{\$\{prefix\}/bin}.
 
 
 % -----------------------------------------------------------------------
 \subsection{Other files}
 
-The  files {\tt demoScan.h} and {\tt  demoPrint.h} contain the definition
+The  files \texttt{demoScan.h} and \texttt{demoPrint.h} contain the definition
 of  the interactive   functions  that scan  the  arguments  of the module
-requests. These functions are used by the test program {\tt demoTest}.
+requests. These functions are used by the test program \texttt{demoTest}.
 
 Appendix~\ref{anx|files} gives an exhaustive list  of the files  produced
 by \GenoM.
