--- a/doc/user_guide/tex/genom-using.tex
+++ b/doc/user_guide/tex/genom-using.tex
@@ -36,16 +36,16 @@ module and of addressing data in the posters.
 
 
 % =======================================================================
-\section{The interactive test program {\tt Test}}
+\section{The interactive test program \texttt{Test}}
 \label{sec|essay}
 
-The interactive test program {\tt <module>Test} is a client of a
+The interactive test program \texttt{<module>Test} is a client of a
 module. One can launch several instances of it, provided they are given
-different {\em numbers} ({\tt <module>Test 5}, {\tt <module>Test 2}, etc.).
+different \emph{numbers} (\texttt{<module>Test 5}, \texttt{<module>Test 2}, etc.).
 
 This program proposes a menu, which associates  a number to each command:
 You just have to  enter the number corresponding  to the command you want
-to execute. Pressing the  {\tt  return}  key  without giving any   number
+to execute. Pressing the  \texttt{return}  key  without giving any   number
 invokes the last command.
 
 \subsection{Sending a request}
@@ -53,20 +53,20 @@ invokes the last command.
 The $N$ requests of the module are numbered from $0$ to $N-1$. If a
 request has some input parameters, they must be entered interactively.
 
-The bracketed value is a default value: simply pressing {\tt return} will
-select  it.  To  interrupt the interactive  input,  type  ``{\tt .}''  (a
+The bracketed value is a default value: simply pressing \texttt{return} will
+select  it.  To  interrupt the interactive  input,  type  ``\texttt{.}''  (a
 single   dot):   defaults  values  will   be  affected   to the remaining
 parameters. Initially default values are set to $0$.  Then they keep the
 previous entered value.
 
 Note: if you have defined another request (or a poster) that outputs the
-same IDS data as this input parameter, then the {\tt <module>Test}
+same IDS data as this input parameter, then the \texttt{<module>Test}
 suggests to initialize automatically this input parameter using the other
 request (or poster). That means that the input parameter will be
 initialized with the current module value.
 
 Once    you  have  entered  the   input   data, you    must  confirm  the
-execution. Type ``{\tt a}'' to abort.  For an execution request, you must
+execution. Type ``\texttt{a}'' to abort.  For an execution request, you must
 choose between  the blocking mode or the  non-blocking mode. In the first
 case,  the execution  of  the interactive program  will be  kept blocking
 until the final reply of the request.  In the second case, the request is
@@ -79,79 +79,79 @@ yourself (with the command $77$, see below).
 Six other commands are defined:
 
 \begin{description}
-\item[55: posters] {\em Display posters}. This command displays another
+\item[55: posters] \emph{Display posters}. This command displays another
 menu, which lets view either a whole poster or a poster's sub-structure.
 
-\item[66: abort] {\em Interrupt an activity}. This command displays the
+\item[66: abort] \emph{Interrupt an activity}. This command displays the
 list of running activities, and waits for the number of the activity you
 wish to interrupt. Just type enter to leave this menu.
 
 Note: if there is no running activity, you can stop the module by
-entering {\tt -99}. {\tt -66} will resume suspended tasks.
+entering \texttt{-99}. \texttt{-66} will resume suspended tasks.
 
-\item[77: replies] {\em Read the final replies}. You must read pending
+\item[77: replies] \emph{Read the final replies}. You must read pending
 replies from time to time to empty the mailbox.
 
-\item[88: state] {\em Display the module state}, {\em i.e.} the control
+\item[88: state] \emph{Display the module state}, \emph{i.e.} the control
 poster.
 
-\item[99: quit] {\em Terminate the program}. But not the module!
+\item[99: quit] \emph{Terminate the program}. But not the module!
 
-\item[-99: end] {\em Terminate the program AND the module}.
+\item[-99: end] \emph{Terminate the program AND the module}.
 \end{description}
 
 
 % =======================================================================
-\section{The interactive tcl shell {\tt tclserv}}
+\section{The interactive tcl shell \texttt{tclserv}}
 \label{sec|tcl}
 
-{\tt tclserv} allows to control a set of modules (requests and posters)
-from a {\tt tcl} shell. Thus, you can take advantage of a full and
+\texttt{tclserv} allows to control a set of modules (requests and posters)
+from a \texttt{tcl} shell. Thus, you can take advantage of a full and
 interactive programming language (tcl) to manipulate requests and data.
 Moreover, you can control modules running on distinct CPUs.
 
 
-{\tt tclserv} is a server which  connects to  a  list of modules on  one
-side, and accepts  tcl clients on  the other side. {\tt tclserv} must run
+\texttt{tclserv} is a server which  connects to  a  list of modules on  one
+side, and accepts  tcl clients on  the other side. \texttt{tclserv} must run
 on the machine that runs the modules. If the modules run on several machines
-then you must run one {\tt tclserv} on each machine. 
+then you must run one \texttt{tclserv} on each machine. 
 
-The {\tt tcl} client can run on any machine. It is a standard {\tt
-tcl} shell, loading the {\tt tcl} package ``{\tt genom}''. However, we
+The \texttt{tcl} client can run on any machine. It is a standard 
+\texttt{tcl} shell, loading the \texttt{tcl} package ``\texttt{genom}''. However, we
 provide such a shell 
 
 
 Here is a typical sequence to control modules with tcl:
 
 \begin{enumerate}
-\item generate the modules with the  option {\tt -t}. 
+\item generate the modules with the  option \texttt{-t}. 
 \item compile and install them
 \item start the modules
-\item start a server {\tt tclserv} on the same machine
-\item on any machine, start a tcl shell with the package genom: {\tt
-      eltclsh -package genom}
-\item from ths shell, connect to the machine running {\tt tclserv}:\\
-	{\tt connect <tclserv-host>}
+\item start a server \texttt{tclserv} on the same machine
+\item on any machine, start a tcl shell with the package genom: 
+\texttt{      eltclsh -package genom}
+\item from ths shell, connect to the machine running \texttt{tclserv}:\\
+	\texttt{connect <tclserv-host>}
 \item load the functions to communicate with the modules:\\
-	{\tt lm <module1>}
+	\texttt{lm <module1>}
 \item send the requests to the modules:\\
-	{\tt module1::Move 1.0}
+	\texttt{module1::Move 1.0}
 \end{enumerate}
 
 
-{\tt tclserv} is  a server which  connects to  a  list of modules on  one
+\texttt{tclserv} is  a server which  connects to  a  list of modules on  one
 side, and accepts  tcl clients on  the other side.  Clients can then send
-requests to  a   set   of   modules,  using the    {\tt  tcl}   scripting
+requests to  a   set   of   modules,  using the    \texttt{tcl}   scripting
 language. This  can  be done  either interactively,  or  by the  mean  of
 scripts.
 
 
 
 % =======================================================================
-\section{{\tt OpenPRS} and {\tt transGen}}
+\section{\texttt{OpenPRS} and \texttt{transGen}}
 \label{sec|propice}
 
-You must generate the module with the option {\tt -o}.
+You must generate the module with the option \texttt{-o}.
 A separate document is (not yet) available.
 
 
@@ -161,9 +161,9 @@ A separate document is (not yet) available.
 
 Two different cases must be considered.
 \begin{itemize}
-\item The name of the poster to be accessed is known ({\em e.g.} the
+\item The name of the poster to be accessed is known (\emph{e.g.} the
 position of a mobile in the module which produces it).
-\item The poster name is not known {\em a priori}, and can be dynamically
+\item The poster name is not known \emph{a priori}, and can be dynamically
 chosen.
 \end{itemize}
 
@@ -174,14 +174,14 @@ steps below must be followed:
 
 \subsubsection{First step: ``poster\_client'' declaration}
 
-Posters  names    must     be    declared   within    the      field {\tt
-poster\_client\_from}   of each execution   task  which  will read  those
-posters ({\em i.e.}  the one that runs   the codels that implement  those
+Posters  names    must     be    declared   within    the      field 
+\texttt{poster\_client\_from}   of each execution   task  which  will read  those
+posters (\emph{i.e.}  the one that runs   the codels that implement  those
 functions).
 
-For instance, the execution task named {\tt MotionTask} can be enabled to
-read the poster  {\tt Mobile} from the  module {\tt demo} and  the poster
-{\tt Echoes} from the module {\tt us} by stating:
+For instance, the execution task named \texttt{MotionTask} can be enabled to
+read the poster  \texttt{Mobile} from the  module \texttt{demo} and  the poster
+\texttt{Echoes} from the module \texttt{us} by stating:
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
 exec_task MotionTask {
@@ -199,16 +199,16 @@ adequate  initialization functions.
 codels}
 
 From  within the  codels,   you can call  the  poster  functions   of the
-libraries {\tt usPosterLib} and {\tt  demoPosterLib} (in the {\tt  auto/}
-directory of  these modules).  You just  need to include  the  files {\tt
-usPosterLib.h} and {\tt demoPosterLib.h} in the codels' file.
+libraries \texttt{usPosterLib} and \texttt{demoPosterLib} (in the \texttt{auto/}
+directory of  these modules).  You just  need to include  the  files 
+\texttt{usPosterLib.h} and \texttt{demoPosterLib.h} in the codels' file.
 
-The  poster    library   provides   read   functions     (functions  {\tt
-xxxPosterRead}) and display functions (functions {\tt xxxPosterShow}) for
+The  poster    library   provides   read   functions     (functions  
+\texttt{xxxPosterRead}) and display functions (functions \texttt{xxxPosterShow}) for
 the control and execution posters of a module.
 
-In  the  following  example, one  first   reads   the whole poster   {\tt
-demoMobile}, then only a sub-structure {\tt Ref} (see page
+In  the  following  example, one  first   reads   the whole poster   
+\texttt{demoMobile}, then only a sub-structure \texttt{Ref} (see page
 \pageref{typedef|demomobile} for the structure definition):
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
@@ -221,16 +221,16 @@ demoMobile}, then only a sub-structure {\tt Ref} (see page
    demoMobileRefPosterRead(&ref);
 \end{verbatim}\end{cartouche}\end{center}
 
-These functions return a {\tt STATUS} ({\tt OK} or {\tt ERROR}). Only the
+These functions return a \texttt{STATUS} (\texttt{OK} or \texttt{ERROR}). Only the
 read functions have a parameter, which is the address of the structure in
 which the read data will be copied.
 
-As shown in the example, the  function name is  the concatenation of {\em
-i.} the name  of  the module, {\em ii.}   the  name of the  poster  ({\tt
-Cntrl} for the control poster), {\em  iii.}  the sub-structure name (when
-a subpart of the poster is addressed instead of  its whole) and {\em iv.}
-the suffix {\tt PosterRead} or {\tt PosterShow}.   These functions can be
-found in the header {\tt demoPosterLib.h}.
+As shown in the example, the  function name is  the concatenation of 
+\emph{i.} the name  of  the module, \emph{ii.}   the  name of the  poster  
+(\texttt{Cntrl} for the control poster), \emph{iii.}  the sub-structure name (when
+a subpart of the poster is addressed instead of  its whole) and \emph{iv.}
+the suffix \texttt{PosterRead} or \texttt{PosterShow}.   These functions can be
+found in the header \texttt{demoPosterLib.h}.
 
 
 \subsubsection{Third step: compilation}
@@ -247,13 +247,13 @@ options in the generated Makefiles.
 
 \subsection{The poster name is not known}
 
-If the name of the  poster to read is unknown  ({\em e.g.} if it will  be
+If the name of the  poster to read is unknown  (\emph{e.g.} if it will  be
 set by a user) you  cannot use its  library. You must use basic functions
-of the generic {\tt posterLib} library instead.
+of the generic \texttt{posterLib} library instead.
 
 When, at run time,  you will get the  name of the  poster, you must first
-find  its id  number,  which   is done  thanks   to the   functions  {\tt
-posterFind}, as shown in the example below:
+find  its id  number,  which   is done  thanks   to the   functions  
+\texttt{posterFind}, as shown in the example below:
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
    static POSTER_ID distantPosterId;
@@ -268,23 +268,23 @@ posterFind}, as shown in the example below:
 We have  already seen how to write  into posters. The read function works
 in the same way:
 
-The   {\tt  posterRead} function   has the  same    prototype as the {\tt
-posterWrite} function:
+The   \texttt{posterRead} function   has the  same    prototype as the 
+\texttt{posterWrite} function:
 
 \bigbreak
-{\tt int posterRead(POSTER\_ID posterId, int offset, char *buf, int nbytes)}
+\texttt{int posterRead(POSTER\_ID posterId, int offset, char *buf, int nbytes)}
 \bigbreak
 
-{\tt  posterId} is  the poster id   (returned by {\tt posterFind}),  {\tt
-offset} is the offset  in bytes from  the beginning of the structure  and
-{\tt  nBytes} is the number  of bytes to read.   The function returns the
-number of bytes actually read (normally {\tt nBytes}).
+\texttt{posterId} is  the poster id   (returned by \texttt{posterFind}),  
+\texttt{offset} is the offset  in bytes from  the beginning of the structure  and
+\texttt{nBytes} is the number  of bytes to read.   The function returns the
+number of bytes actually read (normally \texttt{nBytes}).
 
-As for {\tt posterWrite},  it is also possible to  use the address of the
-poster and   write  directly into  it,  thanks  to  the {\tt  posterAddr}
-function. Such accesses must be protected with a pair of {\tt posterTake}
-and {\tt posterGive} ({\tt posterTake} must be  called with the flag {\tt
-POSTER\_READ} instead of {\tt POSTER\_WRITE}).
+As for \texttt{posterWrite},  it is also possible to  use the address of the
+poster and   write  directly into  it,  thanks  to  the \texttt{posterAddr}
+function. Such accesses must be protected with a pair of \texttt{posterTake}
+and \texttt{posterGive} (\texttt{posterTake} must be  called with the flag 
+\texttt{POSTER\_READ} instead of \texttt{POSTER\_WRITE}).
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
     double speed;
@@ -298,36 +298,36 @@ POSTER\_READ} instead of {\tt POSTER\_WRITE}).
 
 \section{Accessing modules services from another process}
 
-\subsection{The library {\tt posterLib}}
+\subsection{The library \texttt{posterLib}}
 
-The library {\tt  demoPosterLib} provides an initialization function {\tt
-demoPosterInit} and a set of  read functions (ending with {\tt PosterRead})
-and display  functions (ending in {\tt  PosterShow}) for the  control and
+The library \texttt{demoPosterLib} provides an initialization function 
+\texttt{demoPosterInit} and a set of  read functions (ending with \texttt{PosterRead})
+and display  functions (ending in \texttt{PosterShow}) for the  control and
 execution posters of modules.
 
-\subsection{The library {\tt msgLib}}
+\subsection{The library \texttt{msgLib}}
 
 Before you can use this library, you have to create a mailbox in order to
 receive the replies  of remote servers. This is   done with the  function
-{\tt csMboxInit}.
+\texttt{csMboxInit}.
 
 Then, you  must  initialize   connections  for individual    clients: for
-instance {\tt demoClientInit} in the libray {\tt demoMsgLib}.
+instance \texttt{demoClientInit} in the libray \texttt{demoMsgLib}.
 
-Before you  quit, you must  free this connection with {\tt demoClientEnd}
-and close the mailbox with {\tt csMboxEnd}.
+Before you  quit, you must  free this connection with \texttt{demoClientEnd}
+and close the mailbox with \texttt{csMboxEnd}.
 
 
 \subsection{Sending requests and receiving replies}
 
 You   can send requests  through the  functions  of the two
-libraries  {\tt usMsgLib}   and {\tt  demoMsgLib}  (in  the case of   our
-example). To do so, you need to include the  headers {\tt usMsgLib.h} and
-{\tt demoMsgLib.h}.
+libraries  \texttt{usMsgLib}   and \texttt{demoMsgLib}  (in  the case of   our
+example). To do so, you need to include the  headers \texttt{usMsgLib.h} and
+\texttt{demoMsgLib.h}.
 
-The library {\tt demoMsgLib}  defines  several functions whose  names are
-concatenation of: {\em i.} the name of the module, {\em  ii.} the name of
-a request ({\tt  Abort} for the interrupt request),  {\em iii.} a  suffix
+The library \texttt{demoMsgLib}  defines  several functions whose  names are
+concatenation of: \emph{i.} the name of the module, \emph{ii.} the name of
+a request (\texttt{Abort} for the interrupt request),  \emph{iii.} a  suffix
 showing its purpose. Four suffixes are available:
 
 
@@ -339,53 +339,53 @@ suffix & function \\
 
 \tt ReplyRcv & receive a reply (final or intermediate)  (blocking or not)\\
 
-\tt RqstAndRcv & send a request {\em and} receive the {\em final reply}
+\tt RqstAndRcv & send a request \emph{and} receive the \emph{final reply}
 (blocking) \\
 
-\tt RqstAndAck & send a request {\em and} receive the {\em intermediate reply}
+\tt RqstAndAck & send a request \emph{and} receive the \emph{intermediate reply}
 (blocking) \\
 \hline
 \end{tabularx}\end{center}
 
-For a  control request, you  can use  the function  {\tt RqstAndRcv} even
+For a  control request, you  can use  the function  \texttt{RqstAndRcv} even
 though it is blocking: indeed, control requests are meant to execute in a
 very short time, so that the final reply should quickly occur.
 
 However, for  an  execution request it   is strongly advised   to use the
-function {\tt  RqstAndAck}, which waits only  for the  intermediate reply
+function \texttt{RqstAndAck}, which waits only  for the  intermediate reply
 (acknowledgment of the reception of the request).  In general, you cannot
 block your module until the completion of the  remote request.  The final
-reply will be  read with the  non-blocking function {\tt ReplyRcv}, which
+reply will be  read with the  non-blocking function \texttt{ReplyRcv}, which
 you will have to call until reception of the reply.
 
 Consider this example:
 
 \begin{itemize}
-\item To send the control request {\tt SetSpeed} to  the {\tt demo}
-module, you can use the function {\tt demoSetSpeedRqstAndRcv}.
+\item To send the control request \texttt{SetSpeed} to  the \texttt{demo}
+module, you can use the function \texttt{demoSetSpeedRqstAndRcv}.
 
-\item To send the execution request {\tt Monitor}, you can use:
+\item To send the execution request \texttt{Monitor}, you can use:
    \begin{itemize}
-      \item the function {\tt demoMonitorRqstAndAck} and then
-      \item the function {\tt demoMonitorReplyRcv} in non-blocking mode,
-until the reply comes. (if there is nothing else to do, the {\tt SLEEP}
+      \item the function \texttt{demoMonitorRqstAndAck} and then
+      \item the function \texttt{demoMonitorReplyRcv} in non-blocking mode,
+until the reply comes. (if there is nothing else to do, the \texttt{SLEEP}
 state is particularly well suited).
    \end{itemize}
 \end{itemize}
 
-The prototypes  of  these  functions  are defined   in the  header   {\tt
-auto/demoMsgLib.h}. Generic functions  (as for posters) also exists,
+The prototypes  of  these  functions  are defined   in the  header   
+\texttt{auto/demoMsgLib.h}. Generic functions  (as for posters) also exists,
 and are documented in the sections below).
 
 \subsection{An example}
 
-We  present here a few  examples, which involve  a task {\tt pilo} that
-must send  the {\tt  SetSpeed} and   {\tt Goto}  requests  to the
-module {\tt demo}. 
+We  present here a few  examples, which involve  a task \texttt{pilo} that
+must send  the \texttt{SetSpeed} and   \texttt{Goto}  requests  to the
+module \texttt{demo}. 
 
-\subsubsection{Sending a control request: {\tt RqstAndRcv}}
+\subsubsection{Sending a control request: \texttt{RqstAndRcv}}
 
-The functions {\tt RqstAndRcv} can have 2, 3 or 4 arguments, depending on
+The functions \texttt{RqstAndRcv} can have 2, 3 or 4 arguments, depending on
 the input and output declarations of the request:
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
@@ -403,12 +403,12 @@ parameter.
 \item The last argument is the report, returned by the request.
 \end{itemize}
 
-This function returns {\tt FINAL\_REPLY\_OK}  if everything went well, or
-{\tt ERROR} if not.
+This function returns \texttt{FINAL\_REPLY\_OK}  if everything went well, or
+\texttt{ERROR} if not.
 
 \bigbreak
 
-The following example sends the {\tt SetSpeed} request:
+The following example sends the \texttt{SetSpeed} request:
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
    if (demoSetSpeedRqstAndRcv(PILO_CMDTASK_DEMO_CLIENT_ID, 
@@ -418,7 +418,7 @@ The following example sends the {\tt SetSpeed} request:
 \end{verbatim}\end{cartouche}\end{center}
 
 
-\subsubsection{Sending an execution request: {\tt RqstAndAck}}
+\subsubsection{Sending an execution request: \texttt{RqstAndAck}}
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
   int ...RqstAndAck(CLIENT_ID clientId,
@@ -427,30 +427,30 @@ The following example sends the {\tt SetSpeed} request:
                     int *activity, int *report);
 \end{verbatim}\end{cartouche}\end{center}
 
-In comparison with the {\tt ...RqstAndRcv} functions, the {\tt
-RqstAndAck} functions have three more arguments:
+In comparison with the \texttt{...RqstAndRcv} functions, the 
+\texttt{RqstAndAck} functions have three more arguments:
 
 \begin{itemize}
-\item {\tt rqstId} is filled with the request id. This id will let you
+\item \texttt{rqstId} is filled with the request id. This id will let you
 read the reply later.
 
-\item {\tt replyTimeOut} is the time (in ticks) for which you want to
+\item \texttt{replyTimeOut} is the time (in ticks) for which you want to
 wait for the final reply. The value $0$ means ``wait forever''. 
 
-\item {\tt activity} is the activity number. This number will let you get
+\item \texttt{activity} is the activity number. This number will let you get
 information on it (state) or abort it.
 \end{itemize}
 
 Note: if    the execution is  very   fast, you can   get the  final reply
-immediately. This is why this function also has the {\tt out} parameter.
+immediately. This is why this function also has the \texttt{out} parameter.
 
-This function returns {\tt   WAITING\_FINAL\_REPLY} if the   intermediate
-reply has been received, or {\tt FINAL\_REPLY\_OK} if the final reply has
-already been received. {\tt ERROR} is returned in case of a problem.
+This function returns \texttt{WAITING\_FINAL\_REPLY} if the   intermediate
+reply has been received, or \texttt{FINAL\_REPLY\_OK} if the final reply has
+already been received. \texttt{ERROR} is returned in case of a problem.
 
 \bigbreak
 
-The following example shows the sending of the {\tt Monitor} request:
+The following example shows the sending of the \texttt{Monitor} request:
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
 /* Global variables */
@@ -473,7 +473,7 @@ static double piloDemoMonitorOut;         /* Output parameter */
 \end{verbatim}\end{cartouche}\end{center}
 
 
-\subsubsection{Receiving replies: {\tt ReplyRcv}}
+\subsubsection{Receiving replies: \texttt{ReplyRcv}}
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
   int ...ReplyRcv(CLIENT\_ID clientId,
@@ -483,15 +483,15 @@ static double piloDemoMonitorOut;         /* Output parameter */
 
 This function takes two new arguments:
 \begin{itemize}
-\item {\tt rqstId}, which is the identification number returned when the
+\item \texttt{rqstId}, which is the identification number returned when the
 request was sent,
 
-\item {\tt block}, which tells if we want to block until the
+\item \texttt{block}, which tells if we want to block until the
 reply arrives or not.
 \end{itemize}
 
-The  following  example shows the  reception   of the  reply of  the {\tt
-Monitor}  request.  We   use the static
+The  following  example shows the  reception   of the  reply of  the 
+\texttt{Monitor}  request.  We   use the static
 variables defined in the previous example.
 
 
